[project]
name = "prompt-playground"
version = "0.1.0"
description = "Interactive playground for prompt engineering with Claude using Anthropic SDK and Jupyter notebooks"
readme = "README.md"
authors = [
    { name = "Sofian Hadianto", email = "sofian.hadi1983@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
